// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardStatsWidget /> renders correctly 1`] = `
<div
  className="card"
>
  <h4
    className="card-header"
  >
    jest
    <span
      className="float-right"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star fa-w-18 fa-fw card-favourite"
        data-card-id={100}
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
  </h4>
  <div
    className="card-body"
  >
    <table
      className="table table-striped"
    >
      <thead
        className="thead-inverse"
      >
        <tr>
          <th
            colSpan={2}
          >
            Stats
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            scope="row"
          >
            Health
          </th>
          <td>
            4
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Attack
          </th>
          <td>
            1
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Defence
          </th>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td
            colSpan={2}
          />
        </tr>
        <tr>
          <th
            scope="row"
          >
            Up Attack
          </th>
          <td>
            9
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Right Attack
          </th>
          <td>
            6
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Down Attack
          </th>
          <td>
            3
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Left Attack
          </th>
          <td>
            5
          </td>
        </tr>
        <tr>
          <td
            colSpan={2}
          />
        </tr>
        <tr>
          <th
            scope="row"
          >
            Total Stats
          </th>
          <td>
            8
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<CardStatsWidget /> renders correctly with favourite 1`] = `
<div
  className="card"
>
  <h4
    className="card-header"
  >
    jest
    <span
      className="float-right"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star fa-w-18 fa-fw card-favourite enabled"
        data-card-id={100}
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
  </h4>
  <div
    className="card-body"
  >
    <table
      className="table table-striped"
    >
      <thead
        className="thead-inverse"
      >
        <tr>
          <th
            colSpan={2}
          >
            Stats
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            scope="row"
          >
            Health
          </th>
          <td>
            4
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Attack
          </th>
          <td>
            1
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Defence
          </th>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td
            colSpan={2}
          />
        </tr>
        <tr>
          <th
            scope="row"
          >
            Up Attack
          </th>
          <td>
            9
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Right Attack
          </th>
          <td>
            6
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Down Attack
          </th>
          <td>
            3
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Left Attack
          </th>
          <td>
            5
          </td>
        </tr>
        <tr>
          <td
            colSpan={2}
          />
        </tr>
        <tr>
          <th
            scope="row"
          >
            Total Stats
          </th>
          <td>
            8
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
